# diceware

./: .gitignore  Makefile  gen-wordlist.rb  go.mod  main.go
cpp/: CMakeLists.txt  Makefile  codegen.rb  configure.sloth  foo.hpp  main.cpp  wordlist.cpp  wordlist.hpp
diceware/: gen_password.go  wordlist.go
go/: go.mod  main.go
go/diceware/: entropy.go  gen_password.go
